Update .tmux.conf - added mouse mod
In recent version of tmux, this option works

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,6 +11,7 @@ set -g display-time 2000 # 750ms is default
 set-option -g mouse-select-pane on
 set -g mouse-resize-pane on
 #set -g mode-mouse on
+set -g mouse on
 
 # enable activity alerts
 setw -g monitor-activity on
