--- a/.tmux.conf
+++ b/.tmux.conf
@@ -75,6 +75,12 @@ set -g display-panes-time 5000
 # set -g status off
 set -g status-bg colour240
 set -g status-fg white
+
+# set border colour
+set -g pane-border-style 'fg=colour240'
+set -g pane-active-border-style 'fg=yellow'
+setw -g window-status-current-style 'fg=colour17 bg=yellow bold'
+
 #
 # these below are good color personally
 #set -g status-bg colour53 --> dark purple 
@@ -178,4 +184,21 @@ set-option -g allow-rename off
 
 #set -g window-status-current-format "#[fg=#44475a]#[bg=#bd93f9]#[fg=#f8f8f2]#[bg=#bd93f9] #I #W #[fg=#bd93f9]#[bg=#44475a]"
 #set -g window-status-format "#[fg=#f8f8f2]#[bg=#44475a]#I #W #[fg=#44475a] "
+
+#######################################
+# List of plugins
+#######################################
+# for TPM download, git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'github_username/plugin_name#branch'
+# set -g @plugin 'git@github.com:user/plugin'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
 
