--- a/.tmux.conf
+++ b/.tmux.conf
@@ -75,19 +75,22 @@ set -g display-panes-time 5000
 # set -g status off
 set -g status-bg colour240
 set -g status-fg white
+#
+# these below are good color personally
+#set -g status-bg colour53 --> dark purple 
+#set -g status-bg colour97 --> light purple 
+#set -g status-bg colour17 --> dark blue
+#set -g status-bg colour94 --> dark orange
+#set -g status-bg colour64 --> lime
+#set -g status-bg colour240 --> dark gray
+# colors: cyan magenta green blakc yellow 
+
 
 # set border colour
 set -g pane-border-style 'fg=colour240'
 set -g pane-active-border-style 'fg=yellow'
 setw -g window-status-current-style 'fg=colour17 bg=yellow bold'
-
-#
-# these below are good color personally
-#set -g status-bg colour53 --> dark purple 
-#set -g status-bg colour17 --> dark blue
-#set -g status-bg colour94 --> dark orange
-#set -g status-bg colour240 --> dark gray
-# colors: cyan magenta green blakc yellow 
+#setw -g window-status-current-style 'fg=colour17 bg=white bold'
 
 
 # prevent from automatically rename window-name
@@ -185,6 +188,15 @@ set-option -g allow-rename off
 #set -g window-status-current-format "#[fg=#44475a]#[bg=#bd93f9]#[fg=#f8f8f2]#[bg=#bd93f9] #I #W #[fg=#bd93f9]#[bg=#44475a]"
 #set -g window-status-format "#[fg=#f8f8f2]#[bg=#44475a]#I #W #[fg=#44475a] "
 
+
+
+#######################################
+# Useful settings
+#######################################
+set-option -g renumber-windows on
+
+
+
 #######################################
 # List of plugins
 #######################################
@@ -201,4 +213,64 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
+
+
+
+
+
+
+
+
+## DESIGN TWEAKS
+#https://hamvocke.com/blog/a-guide-to-customizing-your-tmux-conf/
+
+## don't do anything when a 'bell' rings
+#set -g visual-activity off
+#set -g visual-bell off
+#set -g visual-silence off
+#setw -g monitor-activity off
+#set -g bell-action none
+
+## clock mode
+#setw -g clock-mode-colour colour1
+
+## copy mode
+#setw -g mode-style 'fg=colour1 bg=colour18 bold'
+
+## pane borders
+#set -g pane-border-style 'fg=colour1'
+#set -g pane-active-border-style 'fg=colour3'
+
+## statusbar
+#set -g status-position bottom
+#set -g status-justify left
+#set -g status-style 'fg=colour1'
+#set -g status-left ''
+#set -g status-right '%Y-%m-%d %H:%M '
+#set -g status-right-length 50
+#set -g status-left-length 10
+
+#setw -g window-status-current-style 'fg=colour0 bg=colour1 bold'
+#setw -g window-status-current-format ' #I #W #F '
+
+#setw -g window-status-style 'fg=colour1 dim'
+#setw -g window-status-format ' #I #[fg=colour7]#W #[fg=colour1]#F '
+
+#setw -g window-status-bell-style 'fg=colour2 bg=colour1 bold'
+
+## messages
+#set -g message-style 'fg=colour2 bg=colour0 bold'
+
+
+
+
+
+
+
+
+
+
+
+
 
